- https://github.com/eclipse-sirius/sirius-components/issues/2092[#2092] [form] Fix support for help expressions on the _FlexboxContainer_ widget
- https://github.com/eclipse-sirius/sirius-components/issues/2088[#2088] [tree] Fix initial value of the tree filter bar
- https://github.com/eclipse-sirius/sirius-components/issues/2133[#2133] [workbench] Fix NPE in Related Elements view

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/2039[#2039] [project] A new "Blank Studio" project template is available to create a project with the "studio" nature but no initial content
- https://github.com/eclipse-sirius/sirius-components/issues/2004[#2004] [form] Add the possibility to show select options' icons.
+
image:doc/screenshots/ShowIconOptionSelectWidget.jpg[Icons on select widget option,70%,30%]
- https://github.com/eclipse-sirius/sirius-components/issues/2055[#2055] [form] Added initial version of a custom widget to view & edit EMF references (both single and multi-valued).
- https://github.com/eclipse-sirius/sirius-components/issues/2056[#2056] [form] Add the possibility to control read-only mode for widgets with an expression.

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/2034[#2034] [diagram] Integrate the workbench selection in the react-flow prototype
- https://github.com/eclipse-sirius/sirius-components/issues/2047[#2047] [view] Activate architectural tests on `sirius-components-view-builder`
- https://github.com/eclipse-sirius/sirius-components/issues/2036[#2036] [form] Add the concept of pageAction in form.
- https://github.com/eclipse-sirius/sirius-components/issues/2015[#2015] [form] Add to the payload the possibility to return a list of messages, these messages will be displayed on the UI.
+
image:doc/screenshots/feedbackMessages.png[Feedback messages,30%,30%]
+
There is an example of the `IFeedbackMessageService` interface usage in `DomainAttributeServices`.